fixed footer overlap and style

--- a/app/assets/stylesheets/components/_explore_planets.scss
+++ b/app/assets/stylesheets/components/_explore_planets.scss
@@ -322,6 +322,6 @@ button:focus {
 .big-boy {
   display: flex;
   justify-content: center;
-  position: relative;
-  top: 60px;
+  // position: relative;
+  // top: 60px;
 }
